Modification on Migration Utility